Collapse button style fix

--- a/DynamoDBSQL/dynamosql/src/app/query-run/query-run.component.scss
+++ b/DynamoDBSQL/dynamosql/src/app/query-run/query-run.component.scss
@@ -3,5 +3,5 @@
 }
 
 mat-icon{
-    padding-left: 10px;
+    margin-right: 5px;
 }
